--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1242,3 +1242,11 @@ speakers:
   image: assets/img/2025/speakers/evan_czaplicki.jpg
   about: "Evan Czaplicki is the creator of the Elm programming language. He lives in Denmark, and is currently developing a compiler to bring the benefits of Elm to databases. Evan is a functional programmer at heart with the broad goal to provide the tools and learning resources to make functional languages common in industry."
   talk: on-productivity-languages-like-elm-and-scala
+
+- name: Martin Odersky
+  position: Keynote Speaker
+  image: assets/img/2025/speakers/martin-odersky.jpeg
+  about: "Martin Odersky is the creator of the Scala programming language and a professor at EPFL in Lausanne, Switzerland. He is also the founder and chairman of the Scala Center. His research interests include programming languages, type systems, and compiler technology. At EPFL, he leads the Programming Methods Laboratory, where he implements the cutting-edge research ideas into the Scala programming language."
+  talk: keynote-martin-odersky
+  github: https://github.com/odersky
+
