--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1240,7 +1240,7 @@ speakers:
 - name: Evan Czaplicki
   position: Keynote Speaker
   image: assets/img/2025/speakers/evan_czaplicki.jpg
-  about: "Evan Czaplicki is the creator of the Elm programming language. He lives in Denmark, and is currently developing a compiler to bring the benefits of Elm to databases. Evan is a functional programmer at heart with the broad goal to provide the tools and learning resources to make functional languages common in industry."
+  about: "Evan is the creator of the Elm programming language. He is currently focused on bringing the benefits of type functional programming to databases, with the longer-term goal of developing Elm in a sustainable and healthy way. He has been developing compilers and servers in Haskell for nearly 15 years, and has significant expertise in using low-level techniques to get the best possible performance out of Haskell programs."
   talk: on-productivity-languages-like-elm-and-scala
 
 - name: Martin Odersky
