--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -549,12 +549,15 @@ talks-2025:
     speaker: ""
     special: blank
     url: ""
-  - title: Panel
+  - title: "Panel: Functional Programming And the Real World"
     day: day3
     stage: stage1
     time: 14:00 - 14:40
-    speaker: ""
-    url: ""
+    speaker: Dimi Racordon
+    speaker2: Evan Czaplicki
+    speaker3: Martin Odersky
+    speaker4: Ralf Jung
+    url: /editions/2025/talks/panel-functional-programming-and-the-real-world
   - title: ""
     day: day3
     stage: stage2
