Update Priyanka Bose’s GitHub

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -896,7 +896,7 @@ speakers:
   talk: from-paradigms-to-percussion-a
   # linkedin: ''
   # twitter: ''
-  github: https://github.com/PriyankaBose
+  github: https://github.com/CoderBose
 - name: Johanna Odersky
   position: Tiko
   image: assets/img/2025/speakers/johanna-odersky.jpg
