Add Nicolas Rinaudo capture checking live coding session

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -412,10 +412,16 @@ talks-2025:
     time: 10:10 - 10:50
     speaker: Bendix Sältz
     url: /editions/2025/talks/grpc-apis-for-autonomous-driving
-  - title: 'Capture Checking: A New Approach to Effect Safety in Scala'
+  - title: 'Live coding capture checking extensions'
     day: day2
     stage: stage3
     time: 10:10 - 10:50
+    speaker: Nicolas Rinaudo
+    url: /editions/2025/talks/live-coding-capture-checking-extensions
+  - title: 'Capture Checking: A New Approach to Effect Safety in Scala'
+    day: day2
+    stage: stage3
+    time: 11:00 - 11:40
     speaker: Oliver Bračevac
     url: /editions/2025/talks/capture-checking-a-new-approach
   - title: Simple and safe serialization/pickling of closures in Scala 3
@@ -440,7 +446,7 @@ talks-2025:
   - title: 'The first steps towards practical capture checking '
     day: day2
     stage: stage3
-    time: 11:00 - 11:40
+    time: 11:50 - 12:30
     speaker: 'Cao Nguyen Pham'
     url: /editions/2025/talks/the-first-steps-towards-practical
   - title: Yo Dawg, Heard You Want To FlatMap Your Direct-Style
@@ -462,12 +468,6 @@ talks-2025:
     speaker: Olga Chuchuk
     speaker2: François Laroche
     url: /editions/2025/talks/the-power-of-full-stack-scala
-  - title: 'Rethinking Monad Transformers: A Submarine way for Error Handling'
-    day: day2
-    stage: stage3
-    time: 11:50 - 12:30
-    speaker: Thanh Le
-    url: /editions/2025/talks/rethinking-monad-transformers-a-submarine
   - title: Tree Sitting will continue until Scala highlighting improves
     day: day2
     stage: stage4
@@ -573,7 +573,8 @@ talks-2025:
     time: 16:10 - 16:50
     speaker: Martin Duhem
     url: /editions/2025/talks/exploring-build-caching-a-practical
-  - day: day2
+  - title: 'Rethinking Monad Transformers: A Submarine way for Error Handling'
+    day: day2
     stage: stage4
     time: 16:10 - 16:50
     title: Domain modeling for event-sourced data
@@ -582,7 +583,9 @@ talks-2025:
   - day: day2
     stage: stage4
     time: 17:00 - 17:40
-    title: To be confirmed
+    title: "Rethinking Monad Transformers: A Submarine way for Error Handling"
+    speaker: Thanh Le
+    url: /editions/2025/talks/rethinking-monad-transformers-a-submarine
   - title: Designing the library powering Netflix's QoE with Scala 3
     day: day2
     stage: stage1
