Add Nicolas to speaker list

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1551,3 +1551,15 @@ speakers:
   talk:
   linkedin: https://www.linkedin.com/in/cesar-a-enrique/
   github: https://github.com/caenrique
+- name: Nicolas Rinaudo
+  position: 'JPMorgan'
+  about: "Nicolas writes code for JPMorgan, where we use Scala to make some very complicated things seem very simple.
+
+After too many years as a Java programmer and a thankfully brief stint in marketing, Nicolas discovered Functional Programming through Scala and fell in love. Since then, he's made it his mission to learn and explain the scary bits, by focusing on practical applications.
+
+Nicolas is also the author and sole maintainer of a few useful OSS libraries, such as kantan.csv - https://nrinaudo.github.io/kantan.csv/."
+  talk: live-coding-capture-checking-extensions
+  linkedin: https://www.linkedin.com/in/nicolasrinaudo/
+  twitter: https://x.com/nicolasrinaudo
+  github: https://github.com/nrinaudo
+
