--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -412,11 +412,12 @@ talks-2025:
     time: 10:10 - 10:50
     speaker: Bendix Sältz
     url: /editions/2025/talks/grpc-apis-for-autonomous-driving
-  - title: 'Hands-On Capture Checking (with Martin Odersky)'
+  - title: 'Hands-On Capture Checking'
     day: day2
     stage: stage3
     time: 10:10 - 10:50
     speaker: Nicolas Rinaudo
+    speaker2: Martin Odersky
     url: /editions/2025/talks/hands-on-capture-checking
   - title: 'Capture Checking: A New Approach to Effect Safety in Scala'
     day: day2
