Fix broken string

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -888,7 +888,7 @@ speakers:
     on scalable software solutions at Sky in London, focusing on backend development
     with functional Scala. She has also contributed to various Scala projects in India,
     specializing in data engineering, and has expertise in Scala, Akka, and big data
-    technologies.
+    technologies.'
   talk: scala-meets-genai-build-the
   linkedin: https://www.linkedin.com/in/kannupriyakalra/
   twitter: https://x.com/KannupriyaKalra
