Update DHL company name
It got renamed from DHL Parcel to DHL eCommerce Benelux

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -950,7 +950,7 @@ speakers:
   twitter: https://x.com/tomas_mikula
   github: https://github.com/TomasMikula
 - name: Jan-Pieter van den Heuvel
-  position: Piozum (Self-employed) / DHL Parcel (Freelance)
+  position: Piozum (Self-employed) / DHL eCommerce Benelux (Freelance)
   image: assets/img/2025/speakers/jan-pieter-van-den-heuvel.jpg
   about: When I was 15 years old I started my own software company. Eager to learn
     more, after high school I started with the Computing Science track at Utrecht
@@ -958,7 +958,7 @@ speakers:
     Science with my thesis on improving the scheduling at a public transport company.
     After that I worked for several start-ups and large corporations as a full-stack
     developer. Currently I am working as a Freelance Lead Machine Learning Engineer
-    at DHL Parcel in the Netherlands where I turn ideas into successful applications
+    at DHL eCommerce in the Netherlands where I turn ideas into successful applications
     of Machine Learning.
   talk: level-up-become-a-compiler
   linkedin: https://www.linkedin.com/in/janpietervandenheuvel
