--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -57,11 +57,10 @@ sponsors:
     logo: assets/img/2025/sponsors/kpler.png
     url: https://www.kpler.com/
 
-  # TODO: Pending logo
-  # - title: Scala Teams
-  #   type: Bronze
-  #   logo: # No logo available
-  #   url: https://scalateams.com/
+  - title: Scala Teams
+    type: Bronze
+    logo: assets/img/2025/sponsors/scalateams.png
+    url: https://scalateams.com/
 
   - title: Mastercard
     type: Bronze
