Add Tiko and Recorded Future as Bronze sponsors

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -106,3 +106,13 @@ sponsors:
     type: Bronze
     logo: assets/img/2025/sponsors/softwaremill-logo.png
     url: https://softwaremill.com/
+
+  - title: Tiko
+    type: Bronze
+    logo: assets/img/2025/sponsors/tiko.png
+    url: https://tiko.org/
+
+  - title: Recorded Future
+    type: Bronze
+    logo: assets/img/2025/sponsors/recorded-future.png
+    url: https://www.recordedfuture.com/
