Add Swissborg to sponsors

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -116,3 +116,8 @@ sponsors:
     type: Bronze
     logo: assets/img/2025/sponsors/recorded-future.png
     url: https://www.recordedfuture.com/
+
+  - title: Swissborg
+    type: Bronze
+    logo: assets/img/2025/sponsors/swissborg.svg
+    url: https://swissborg.com/
