Rename Closing panel to Closing words and change the time.

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -818,10 +818,10 @@ talks-2025:
     speaker: ""
     special: blank
     url: ""
-  - title: Closing Panel
+  - title: Closing Words
     day: day3
     stage: stage1
-    time: 18:00 - 19:00
+    time: 18:00 - 18:30
     speaker: ""
     url: ""
   - title: ""
