Add Christophe Imhoos to the CoC team

--- a/_data/code_of_conduct.yml
+++ b/_data/code_of_conduct.yml
@@ -27,3 +27,16 @@ team:
     phone: "+41 78 262 08 10"
     website: https://www.exlitis-mediation.ch
     image: /assets/img/2025/code-of-conduct/patricia-bally.jpg
+
+  - name: Christophe Imhoos
+    position: Attorney at Law, Independant Arbitrator, Certified Mediator, Coach
+    about: |
+      With a background in law and mediation, including degrees from the University of Geneva, New York University, and a European Master's in mediation, I specialize in amicable conflict resolution and workplace mediation.
+
+      As an external neutral party, I serve as mediator, conciliator and collaborative lawyer, working with full impartiality, confidentiality and independence. I provide trusted person services for numerous private and public organizations and NGOs, conduct harassment investigations and workplace climate assessments, and serve as ombudsperson for a large international Swiss Foundation and as workplace mediator at the Council of Europe.
+
+      My mission: to provide expert guidance in preventing, managing and resolving disputes, helping organisations maintain healthy and safe work environments and fulfil their obligations to employee well-being and integrity.
+    email: ch@imhoos.ch
+    phone: "+41 (0)79 200 22 52"
+    website: https://www.esprit-entente.ch
+    image: /assets/img/2025/code-of-conduct/christophe-imhoos.jpg
