Add Deltek as a sponsor

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -121,3 +121,8 @@ sponsors:
     type: Bronze
     logo: assets/img/2025/sponsors/swissborg.svg
     url: https://swissborg.com/
+
+  - title: Deltek
+    type: Bronze
+    logo: assets/img/2025/sponsors/deltek.png
+    url: https://www.deltek.com/
