Add HES-SO to sponsors

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -126,3 +126,8 @@ sponsors:
     type: Bronze
     logo: assets/img/2025/sponsors/deltek.png
     url: https://www.deltek.com/
+
+  - title: HES-SO Valais-Wallis
+    type: Bronze
+    logo: assets/img/2025/sponsors/hesso.png
+    url: https://www.hevs.ch/en/applied-research/research-institute-informatics/
