--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -659,6 +659,37 @@ talks-2025:
     time: 11:50 - 12:30
     speaker: Antonio Jimenez
     url: /editions/2025/talks/exploring-cats-effect-s-new-integrated
+
+  - title: Lunch
+    day: day3
+    stage: stage1
+    time: 12:30 - 14:00
+    speaker: ""
+    special: lunch
+    url: ""
+  - title: Lunch
+    day: day3
+    stage: stage2
+    time: 12:30 - 14:00
+    speaker: ""
+    special: lunch
+    url: ""
+  - title: Lunch
+    day: day3
+    stage: stage3
+    time: 12:30 - 14:00
+    speaker: ""
+    special: lunch
+    url: ""
+  - title: Lunch
+    day: day3
+    stage: stage4
+    time: 12:30 - 14:00
+    speaker: ""
+    special: lunch
+    url: ""
+
+
   - title: 'Scala and Arpeggio: Audio processing with Scala Native and FS2'
     day: day3
     stage: stage1
