Add Artima and NuMind as Bronze sponsors

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -131,3 +131,13 @@ sponsors:
     type: Bronze
     logo: assets/img/2025/sponsors/hesso.png
     url: https://www.hevs.ch/en/applied-research/research-institute-informatics/
+
+  - title: Artima
+    type: Bronze
+    logo: assets/img/2025/sponsors/artima.png
+    url: https://www.artima.com/
+
+  - title: NuMind
+    type: Bronze
+    logo: assets/img/2025/sponsors/numind.png
+    url: https://numind.ai/
