Add SiriusXM as a Bronze sponsor

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -141,3 +141,8 @@ sponsors:
     type: Bronze
     logo: assets/img/2025/sponsors/numind.png
     url: https://numind.ai/
+
+  - title: SiriusXM
+    type: Bronze
+    logo: assets/img/2025/sponsors/siriusxm.png
+    url: https://www.siriusxm.com/
